fixing styling of hero on mobile

--- a/src/Pages/Home/Hero/_tablet.scss
+++ b/src/Pages/Home/Hero/_tablet.scss
@@ -8,6 +8,9 @@
 
         video {
             position: relative;
+            min-height: 50vh;
+            object-fit: cover;
+            object-position: 50% 0;
         }
     
         &::before {
